# nihpp

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  nihpp.pc.in
m4/: stdcxx0x.m4
nihpp/: property.hh  ptrcreator.hh  scopedvar.hh  sharedptrcreator.hh  singleton.hh  uniqueptrcreator.hh
nihpp/glib/: refptrcreator.hh
nihpp/sigc++/: fixfunctors.hh
src/: ptrcreator.hh
tests/: testproperty.cc  testptrcreator.cc  testsigc.cc  testsingleton.cc
